fixed responsive issue where text is not wrapping causing the div to expand further and converted all md to xs

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -120,12 +120,15 @@
 .contact-section-cta {
     color: #FFFFFF;
     text-align: center;
+    font-size: 28px;
+    word-wrap: break-word;
 }
 
 .contact-section-details {
     font-size: 20px;
     text-align: center;
     color: #b3e5fc;
+    word-wrap: break-word;
 }
 
 .navbar-menu {
